// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main function should match snapshot 1`] = `
"1 3 N
5 1 E
"
`;

exports[`main function should match snapshot when there has been colissions and call console.error 1`] = `
"1 3 N
"
`;
